hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__list__test__const@pre-mem2reg@llvm20.snap
---
source: hugr-llvm/src/extension/collections/list.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private ptr @_hl.main.1() {
alloca_block:
  %"0" = alloca ptr, align 8
  %"5_0" = alloca ptr, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %0 = call ptr @__rt__list__new(i64 3, i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i64 8, ptr null)
  %1 = alloca i64, align 8
  store i64 1, ptr %1, align 4
  call void @__rt__list__push(ptr %0, ptr %1)
  %2 = alloca i64, align 8
  store i64 2, ptr %2, align 4
  call void @__rt__list__push(ptr %0, ptr %2)
  %3 = alloca i64, align 8
  store i64 3, ptr %3, align 4
  call void @__rt__list__push(ptr %0, ptr %3)
  store ptr %0, ptr %"5_0", align 8
  %"5_01" = load ptr, ptr %"5_0", align 8
  store ptr %"5_01", ptr %"0", align 8
  %"02" = load ptr, ptr %"0", align 8
  ret ptr %"02"
}

declare ptr @__rt__list__new(i64, i64, i64, ptr)

declare void @__rt__list__push(ptr, ptr)
