hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__list__test__get@pre-mem2reg@llvm20.snap
---
source: hugr-llvm/src/extension/collections/list.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private { i1, i16 } @_hl.main.1(ptr %0, i64 %1) {
alloca_block:
  %"0" = alloca { i1, i16 }, align 8
  %"2_0" = alloca ptr, align 8
  %"2_1" = alloca i64, align 8
  %"4_0" = alloca { i1, i16 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr %0, ptr %"2_0", align 8
  store i64 %1, ptr %"2_1", align 4
  %"2_01" = load ptr, ptr %"2_0", align 8
  %"2_12" = load i64, ptr %"2_1", align 4
  %2 = alloca i16, align 2
  %3 = call i1 @__rt__list__get(ptr %"2_01", i64 %"2_12", ptr %2)
  %4 = load i16, ptr %2, align 2
  %5 = insertvalue { i1, i16 } { i1 true, i16 poison }, i16 %4, 1
  %6 = select i1 %3, { i1, i16 } %5, { i1, i16 } { i1 false, i16 poison }
  store { i1, i16 } %6, ptr %"4_0", align 2
  %"4_03" = load { i1, i16 }, ptr %"4_0", align 2
  store { i1, i16 } %"4_03", ptr %"0", align 2
  %"04" = load { i1, i16 }, ptr %"0", align 2
  ret { i1, i16 } %"04"
}

declare i1 @__rt__list__get(ptr, i64, ptr)
