hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__list__test__length@llvm20.snap
---
source: hugr-llvm/src/extension/collections/list.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private { ptr, i64 } @_hl.main.1(ptr %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = call i64 @__rt__list__length(ptr %0)
  %mrv = insertvalue { ptr, i64 } poison, ptr %0, 0
  %mrv6 = insertvalue { ptr, i64 } %mrv, i64 %1, 1
  ret { ptr, i64 } %mrv6
}

declare i64 @__rt__list__length(ptr)
