hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__list__test__length@pre-mem2reg@llvm20.snap
---
source: hugr-llvm/src/extension/collections/list.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private { ptr, i64 } @_hl.main.1(ptr %0) {
alloca_block:
  %"0" = alloca ptr, align 8
  %"1" = alloca i64, align 8
  %"2_0" = alloca ptr, align 8
  %"4_0" = alloca ptr, align 8
  %"4_1" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr %0, ptr %"2_0", align 8
  %"2_01" = load ptr, ptr %"2_0", align 8
  %1 = call i64 @__rt__list__length(ptr %"2_01")
  store ptr %"2_01", ptr %"4_0", align 8
  store i64 %1, ptr %"4_1", align 4
  %"4_02" = load ptr, ptr %"4_0", align 8
  %"4_13" = load i64, ptr %"4_1", align 4
  store ptr %"4_02", ptr %"0", align 8
  store i64 %"4_13", ptr %"1", align 4
  %"04" = load ptr, ptr %"0", align 8
  %"15" = load i64, ptr %"1", align 4
  %mrv = insertvalue { ptr, i64 } poison, ptr %"04", 0
  %mrv6 = insertvalue { ptr, i64 } %mrv, i64 %"15", 1
  ret { ptr, i64 } %mrv6
}

declare i64 @__rt__list__length(ptr)
