hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__list__test__pop@llvm20.snap
---
source: hugr-llvm/src/extension/collections/list.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private { ptr, { i1, i16 } } @_hl.main.1(ptr %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = alloca i16, align 2
  %2 = call i1 @__rt__list__pop(ptr %0, ptr %1)
  %3 = load i16, ptr %1, align 2
  %4 = insertvalue { i1, i16 } { i1 true, i16 poison }, i16 %3, 1
  %5 = select i1 %2, { i1, i16 } %4, { i1, i16 } { i1 false, i16 poison }
  %mrv = insertvalue { ptr, { i1, i16 } } poison, ptr %0, 0
  %mrv6 = insertvalue { ptr, { i1, i16 } } %mrv, { i1, i16 } %5, 1
  ret { ptr, { i1, i16 } } %mrv6
}

declare i1 @__rt__list__pop(ptr, ptr)
