hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__list__test__pop@pre-mem2reg@llvm20.snap
---
source: hugr-llvm/src/extension/collections/list.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private { ptr, { i1, i16 } } @_hl.main.1(ptr %0) {
alloca_block:
  %"0" = alloca ptr, align 8
  %"1" = alloca { i1, i16 }, align 8
  %"2_0" = alloca ptr, align 8
  %"4_0" = alloca ptr, align 8
  %"4_1" = alloca { i1, i16 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr %0, ptr %"2_0", align 8
  %"2_01" = load ptr, ptr %"2_0", align 8
  %1 = alloca i16, align 2
  %2 = call i1 @__rt__list__pop(ptr %"2_01", ptr %1)
  %3 = load i16, ptr %1, align 2
  %4 = insertvalue { i1, i16 } { i1 true, i16 poison }, i16 %3, 1
  %5 = select i1 %2, { i1, i16 } %4, { i1, i16 } { i1 false, i16 poison }
  store ptr %"2_01", ptr %"4_0", align 8
  store { i1, i16 } %5, ptr %"4_1", align 2
  %"4_02" = load ptr, ptr %"4_0", align 8
  %"4_13" = load { i1, i16 }, ptr %"4_1", align 2
  store ptr %"4_02", ptr %"0", align 8
  store { i1, i16 } %"4_13", ptr %"1", align 2
  %"04" = load ptr, ptr %"0", align 8
  %"15" = load { i1, i16 }, ptr %"1", align 2
  %mrv = insertvalue { ptr, { i1, i16 } } poison, ptr %"04", 0
  %mrv6 = insertvalue { ptr, { i1, i16 } } %mrv, { i1, i16 } %"15", 1
  ret { ptr, { i1, i16 } } %mrv6
}

declare i1 @__rt__list__pop(ptr, ptr)
